# TKPM-Exercise

./: CMakeLists.txt  README.md  Student.cpp  Student.h  config.json  department.csv  department.json  main.cpp  program.csv  program.json  status.csv  status.json  student.json  students.csv
Config/: config.cpp  config.h
Department/: check_dependencies.cpp  department.cpp  department.h
LogEvent/: log_event.cpp  log_event.h
Program/: check_dependencies.cpp  program.cpp  program.h
ShowVersion/: show_version.cpp  show_version.h
Status/: check_dependencies.cpp  status.cpp  status.h
Student/Funcs/: add_student.cpp  check_dependencies.cpp  class.cpp  csv.cpp  delete_student.cpp  export_student_interactive.cpp  export_to_html.cpp  export_to_md.cpp  menu.cpp  search_student.cpp  student.cpp  student_exporter.cpp  update_student.cpp
Student/Headers/: student.h  student_exporter.h
Validation/: validate.cpp  validate.h
tests/: CMakeLists.txt  test_add_student.cpp  test_update_student.cpp
